--- a/SimFunctions/SimWrapper.Rmd
+++ b/SimFunctions/SimWrapper.Rmd
@@ -26,6 +26,8 @@ source("SimFunctions/simfun_exp.R")
 source("ModelFunctions/ParamVals.R")
 source("ModelFunctions/subpop_mx_fun.R")
 seeds_df <- read_csv("seedSearchOutput/seedSearch_2025-01-29 21:30:11.114866.csv") %>% 
+  rbind(.,read_csv("seedSearchOutput/seedSearch_2025-02-07 14:15:25.516399.csv")) %>% 
+  rbind(.,read_csv("seedSearchOutput/seedSearch_2025-02-11 21:16:56.112911.csv")) %>% 
   mutate(seeds2 = floor(seeds)) %>% 
   group_by(asp.effects,asp.mag,clim.sd) %>% 
   summarize(avg.seeds = round(mean(seeds)))
@@ -34,26 +36,33 @@ seeds_df <- read_csv("seedSearchOutput/seedSearch_2025-01-29 21:30:11.114866.csv
 ## Run simulations for all aspect effect combinations
 ```{r Scen1}
 
-# Sim. function inputs
+# # Sim. function inputs
 burn.in.yrs <- 100
 sim.yrs <- 500
 reps <- 5
 clim.sds <- seq(0,25,by=1);clim.sds[clim.sds==0] <- 0.001
 asp.mags <- seq(0,20,by=1)
-rhos <- seq(0,0.5,0.25)
+rhos <- seq(0,0.5,0.1)
 move.rates <- seq(0,0.2,0.05)
+# 
+# asp.effects <- 
+#   list(
+#     # Symmetrical
+#     c(-1, 1), # Simple
+#     c(-1.1,-1, 1,1.1), # More pops
+#     c(-1.5,-1, 1,1.5), # More pops more dramatic
+#     
+#     # Asymmetrical
+#     c(-1,-1,1),
+#     c(-1.1,1) , 
+#     c(-1.2,-1.1,-1,1)
+# )
 
-asp.effects <- 
+asp.effects <-
   list(
-    # Symmetrical
-    c(-1, 1), # Simple
-    # c(-1.1,-1, 1,1.1), # More pops
-    # c(-1.5,-1, 1,1.5), # More pops more dramatic
-    
-    # Asymmetrical
-    # c(-1,-1,1),
-    c(-1.1,1)# , 
-    # c(-1.2,-1.1,-1,1)
+    c(-2, 1), 
+    c(-2,-1, 1), 
+    c(-2,-1, 1,2) 
 )
 
 # # Things needed to run sim function line by line
@@ -65,7 +74,7 @@ asp.effects <-
 # move.rate.i = 0.1
 
 #### Run S1 #####
-cl = makeCluster(spec = 25)
+cl = makeCluster(spec = 20)
 registerDoParallel(cl = cl)
 
 S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:% 
@@ -106,21 +115,9 @@ S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","Env
       }
 stopCluster(cl)
 # S1_out_df <- rename(S1_out_df,move.rate=y)
+S1_out_df$asp.effect <- paste0("c(",S1_out_df$asp.effect,")")
 write_csv(S1_out_df,paste0("SimOutput/S1_",round(Sys.time()),".csv"))
 ```
-
-```{r}
-
-
-for(i in 1:length(asp.effects)){
-  
-  ae.i <- paste(unlist(asp.effects[[i]]),collapse=",")
-  tmp <- filter(S1_out_df,asp.effect == ae.i)
-  write_csv(tmp,paste0("SimOutput/asp_effect_output/aspeff_",ae.i,"_2025-01-14__2.csv"))
-  
-}
-```
-
 
 S1 Deep dive
 ```{r s1.deepdive}
