--- a/SimFunctions/SimWrapper.Rmd
+++ b/SimFunctions/SimWrapper.Rmd
@@ -44,12 +44,12 @@ seeds_df$asp.effects[seeds_df$asp.effects=="-1.51"] = "-1.5,1"
 
 # # Sim. function inputs
 burn.in.yrs <- 100
-sim.yrs <- 500
+sim.yrs <- 200
 reps <- 5
-clim.sds <- seq(0,25,by=1);clim.sds[clim.sds==0] <- 0.001
-asp.mags <- seq(0,20,by=1)
-rhos <- seq(0,0.5,0.1)
-move.rates <- seq(0,0.2,0.05)
+clim.sds <- seq(0,5,by=0.5);clim.sds[clim.sds==0] <- 0.001
+asp.mags <- seq(0,5,by=0.25)
+rhos <- seq(0,0.2,0.1)
+move.rates <- seq(0,0.2,0.1)
 # 
 # asp.effects <- 
 #   list(
@@ -70,24 +70,27 @@ move.rates <- seq(0,0.2,0.05)
 #     c(-2,-1, 1), 
 #     c(-2,-1, 1,2) 
 # )
+
 asp.effects <-
   list(
-    c(-1.5, 1) # Simple
+    c(-1, 1) # Simple
 )
 
 # Things needed to run sim function line by line
-# clim.sd.i <- clim.sd <- 10
-# asp.mag <- asp.mag.i <- 2
+# clim.sd.i <- clim.sd <- 5
+# asp.mag <- asp.mag.i <- 12
 # rep = 1
-# rho.i <- 0.5
+# rho.i <- rho <- 0.5
 # asp.eff.i = 1
-# move.rate.i = 0.1
+# move.rate.i = 0
+# asp.effects <- c(-1,1)
+# move.mx <- moveMx_fun(n.subpops = 2,move.rate = move.rate.i)
 
 #### Run S1 #####
 cl = makeCluster(spec = 20)
 registerDoParallel(cl = cl)
 
-S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:% 
+out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:% 
   foreach(asp.eff.i = 1:length(asp.effects), .combine = rbind,.packages=c("tidyverse","EnvStats")) %:%
     foreach(move.rate.i = move.rates, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:%
       foreach(clim.sd.i = clim.sds, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:%
@@ -104,8 +107,7 @@ S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","Env
           
             seeds.i = seeds_df$avg.seeds[seeds_df$asp.mag==asp.mag.i & seeds_df$asp.effects == paste(asp.effects.i,collapse = ",")]
             
-            
-            df = simfun_exponential(burn.in.yrs=burn.in.yrs, sim.yrs=sim.yrs, n.subpops=n.subpops.i, asp.effects = asp.effects.i,
+            df = simfun_exponential(burn.in.yrs=burn.in.yrs, sim.yrs=sim.yrs,asp.effects = asp.effects.i,
                                 clim.sd=clim.sd.i, asp.mag=asp.mag.i, move.mx = move.mx.i,seeds = seeds.i,rho = rho.i)
             
             tmp.df = df %>%
@@ -126,8 +128,8 @@ S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","Env
       }
 stopCluster(cl)
 # S1_out_df <- rename(S1_out_df,move.rate=y)
-S1_out_df$asp.effect <- paste0("c(",S1_out_df$asp.effect,")")
-write_csv(S1_out_df,paste0("SimOutput/S1_",round(Sys.time()),".csv"))
+out_df$asp.effect <- paste0("c(",S1_out_df$asp.effect,")")
+write_csv(out_df,paste0("SimOutput/S1_",round(Sys.time()),".csv"))
 ```
 
 S1 Deep dive
