--- a/scratch/ManuFigures.Rmd
+++ b/scratch/ManuFigures.Rmd
@@ -34,7 +34,7 @@ source("ModelFunctions/survival_fun.R")
 source("ModelFunctions/growth_fun.R")
 source("ModelFunctions/subpop_mx_fun.R")
 source("ModelFunctions/seednum_fun.R")
-seed_df <- read_csv("seedSearchOutput/seedSearch_2025-01-29 00:05:00.499335.csv") %>% 
+seed_df <- read_csv("seedSearchOutput/seedSearch_2025-01-29 21:30:11.114866.csv") %>% 
   mutate(seeds2 = floor(seeds)) %>% 
   group_by(asp.effects,clim.sd,asp.mag) %>% 
   summarize(avg.seeds = round(mean(seeds)))
@@ -47,8 +47,8 @@ asp.effects = c(-1,1)
 n.subpops = length(asp.effects)
 start.cells = seq(1,n.subpops*3,by=3)
 
-lam_df = expand.grid(asp.mag = seq(7,15,1),
-                     clim = seq(-50,50,1),
+lam_df = expand.grid(asp.mag = c(1,5,10,15),
+                     clim = seq(-40,40,1),
                      s1 = NA, s2 = NA, pop=NA)
 
 for(i in 1:nrow(lam_df)){
@@ -75,14 +75,15 @@ for(i in 1:nrow(lam_df)){
 }
 
 ggplot(lam_df,aes(x=clim))+
-  geom_line(aes(y=s1,color="s1"))+
-  geom_line(aes(y=s2,color="s2"))+
+  geom_line(aes(y=s1,color="-1"),linewidth = 1)+
+  geom_line(aes(y=s2,color="+1"),linewidth = 1)+
   # geom_line(aes(y=pop,color="pop"))+
   theme_bw(base_size = 16)+
-  scale_x_continuous(limits = c(-50,50))+
-  theme(legend.position = "none")+
-  labs(title=paste0("Microhabitat shift values = ",list(asp.effects)))+
-  facet_wrap(~asp.mag,ncol=1)
+  scale_x_continuous(limits = c(-40,40))+
+  # theme(legend.position = "none")+
+  labs(title=paste0("Microhabitat conditions relative to regional average (0) = ",list(asp.effects)))+
+  facet_wrap(~asp.mag,ncol=2)+
+  scale_color_manual(values = c("dodgerblue","sienna2"))
 
 asp.mags = seq(1,20,5)
 clim.sds = seq(5,20,5)
