--- a/ModelFunctions/BuildingDemoModel.Rmd
+++ b/ModelFunctions/BuildingDemoModel.Rmd
@@ -96,41 +96,21 @@ rm(i)
 ### Find the climate SD that maximizes lambda for all microhabitat effect strengths
 ```{r maxLam_by_climSD}
 
-# asp.effects <- 
-#   list(
-#     # Symmetrical
-#     c(-1, 1), # Simple
-#     c(-1.1,-1, 1,1.1), # More pops
-#     c(-1.5,-1, 1,1.5), # More pops more dramatic
-#     
-#     # Asymmetrical
-#     c(-1,-1,1),
-#     c(-1.1,1), 
-#     c(-1.2,-1.1,-1,1)
-# )
-# 
-# asp.effects <-
-#   list(
-#     c(-2, 1), # Simple
-#     c(-2,-1, 1), # More pops
-#     c(-2,-1, 1,2) # More pops more dramatic
-# )
-
 asp.effects <-
   list(
-    c(-1.5, 1), # Simple
+    c(-1, 1), # Simple
+    c(-0.5,1), # Asymmetrical, 2 pop
+    c(-0.5,-1,1) # 3 pops
 )
-
-
 
 # n.subpops <- length(asp.effects)
 burn.in <- 50
-sim.years <- 250
+sim.years <- 200
 years <- burn.in + sim.years
 seeds <- 500
 
 # Loop over these
-reps <- 10
+reps <- 20
 asp.mags <- seq(0,30,1)
 clim.sds <- seq(0,30,1)
 
@@ -222,31 +202,12 @@ write_csv(maxLam_by_climsd_df,paste0("seedSearchOutput/maxLam_",round(Sys.time()
 ### For each microhabitat effect, find the seed number that corresponds to LT lambda being ~1 in peak conditions (peak climate SD)
 ```{r seeds_search}
 
-# asp.effects <- 
-#   list(
-#     # Symmetrical
-#     c(-1, 1), # Simple
-#     c(-1.1,-1, 1,1.1), # More pops
-#     c(-1.5,-1, 1,1.5), # More pops more dramatic
-#     
-#     # Asymmetrical
-#     c(-1,-1,1),
-#     c(-1.1,1), 
-#     c(-1.2,-1.1,-1,1)
-# )
-
-asp.effects <-
-  list(
-    c(-2, 1), 
-    c(-2,-1, 1), 
-    c(-2,-1, 1,2) 
-)
-
 burn.in <- 50
 sim.years <- 250
 years <- burn.in + sim.years
 
-seed_climsd_df <- read_csv("seedSearchOutput/maxLam_2025-02-11 13:20:30.csv") %>% 
+seed_climsd_df <- read_csv("seedSearchOutput/maxLam_2025-02-21 09:47:20.csv",
+                           col_types = cols(asp.effects=col_character())) %>% 
   group_by(asp.mag,asp.effects,clim.sd) %>% # For each clim.sd/asp.mag combination
   summarise(mean.lt.lam = mean(lt.lam),
          max.lt.lam = max(lt.lam)) %>% # Find the mean lt lambda value
@@ -267,7 +228,8 @@ registerDoParallel(cl = cl)
 seed_search <- foreach(r = 1:reps, .combine=rbind, .packages=c("tidyverse","EnvStats")) %dopar% {
   for(i in 1:nrow(seed_climsd_df)){
     
-    asp.effects.i <- strsplit(seed_climsd_df$asp.effects[i],",") %>% unlist()
+    # asp.effects.i <- seed_climsd_df$asp.effects[i] %>% unlist()
+    asp.effects.i <- c(-1.5,1)
     n.subpops.i <- length(asp.effects.i)
     start.cells <- F.rows <- seq(1,n.subpops.i*3,by=3)
     
@@ -339,7 +301,7 @@ seed_search <- foreach(r = 1:reps, .combine=rbind, .packages=c("tidyverse","EnvS
       
       annual.df <- filter(annual.df,yr>burn.in)
       lt.lam <- geoMean(annual.df$lam)
-      print(c(lt.lam,seeds))
+      # print(c(lt.lam,seeds))
       
       x <- (lt.lam - 1)^2
       
@@ -372,7 +334,7 @@ write_csv(seed_search,paste0("seedSearchOutput/seedSearch_",Sys.time(),".csv"))
 ```{r more_growthFun}
 
 growth_df = expand.grid(asp.effect = c(-1,1),
-                        asp.mag = 20,
+                        asp.mag = 10,
                         clim = rnorm(n=1000,sd=15),
                         seed = NA, juv = NA)
 
