--- a/SimFunctions/SimWrapper.Rmd
+++ b/SimFunctions/SimWrapper.Rmd
@@ -25,31 +25,24 @@ source("SimFunctions/moveMx_fun.R")
 source("SimFunctions/simfun_exp.R")
 source("ModelFunctions/ParamVals.R")
 source("ModelFunctions/subpop_mx_fun.R")
-seeds_df <- read_csv("seedSearchOutput/seedSearch_2025-01-29 21:30:11.114866.csv") %>% 
-  rbind(.,read_csv("seedSearchOutput/seedSearch_2025-02-07 14:15:25.516399.csv")) %>% 
-  rbind(.,read_csv("seedSearchOutput/seedSearch_2025-02-11 21:16:56.112911.csv")) %>% 
-  rbind(.,read_csv("seedSearchOutput/seedSearch_2025-02-17 10:07:58.468259.csv",
-                   col_types = c(asp.effects=col_character()))) %>% 
+seeds_df <- read_csv("seedSearchOutput/seedSearch_2025-02-22 08:11:05.956603.csv") %>% 
   mutate(seeds2 = floor(seeds)) %>% 
   group_by(asp.effects,asp.mag,clim.sd) %>% 
   summarize(avg.seeds = round(mean(seeds)))
 summary(seeds_df)
-
-seeds_df$asp.effects[seeds_df$asp.effects=="-1.51"] = "-1.5,1"
-
 ```
 
 ## Run simulations for all aspect effect combinations
 ```{r Scen1}
 
 # # Sim. function inputs
-burn.in.yrs <- 100
-sim.yrs <- 200
+burn.in.yrs <- 50
+sim.yrs <- 250
 reps <- 5
-clim.sds <- seq(0,5,by=0.5);clim.sds[clim.sds==0] <- 0.001
-asp.mags <- seq(0,5,by=0.25)
-rhos <- seq(0,0.2,0.1)
-move.rates <- seq(0,0.2,0.1)
+clim.sds <- seq(0,20,by=1);clim.sds[clim.sds==0] <- 0.001
+asp.mags <- seq(0,20,by=1)
+rhos <- seq(0,0.2,0.2)
+move.rates <- c(0.05,0.2,0.4)
 # 
 # asp.effects <- 
 #   list(
@@ -73,7 +66,9 @@ move.rates <- seq(0,0.2,0.1)
 
 asp.effects <-
   list(
-    c(-1, 1) # Simple
+    c(-1, 1), # Simple
+    c(-0.5,1), # Asymmetrical, 2 pop
+    c(-0.5,-1,1) # 3 pops
 )
 
 # Things needed to run sim function line by line
@@ -128,7 +123,7 @@ out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","EnvSta
       }
 stopCluster(cl)
 # S1_out_df <- rename(S1_out_df,move.rate=y)
-out_df$asp.effect <- paste0("c(",S1_out_df$asp.effect,")")
+# out_df$asp.effect <- paste0("c(",=_out_df$asp.effect,")")
 write_csv(out_df,paste0("SimOutput/S1_",round(Sys.time()),".csv"))
 ```
 
