--- a/SimOutput/SImulationOutputPlots.Rmd
+++ b/SimOutput/SImulationOutputPlots.Rmd
@@ -69,30 +69,18 @@ contour_colors <- function(df,binwidth,var){
 
 ### Data ####
 ```{r}
-seeds_df <- read_csv("seedSearchOutput/seedSearch_2025-01-29 21:30:11.114866.csv") %>% 
-  rbind(.,read_csv("seedSearchOutput/seedSearch_2025-02-07 14:15:25.516399.csv")) %>% 
-  rbind(.,read_csv("seedSearchOutput/seedSearch_2025-02-11 21:16:56.112911.csv")) %>% 
-  rbind(.,read_csv("seedSearchOutput/seedSearch_2025-02-17 10:07:58.468259.csv",
-                   col_types = c(asp.effects=col_character()))) %>% 
+seeds_df <- read_csv("seedSearchOutput/seedSearch_2025-02-22 08:11:05.956603.csv") %>% 
   mutate(seeds2 = floor(seeds)) %>% 
   group_by(asp.effects,asp.mag,clim.sd) %>% 
   summarize(avg.seeds = round(mean(seeds)))
 
-seeds_df$asp.effects[seeds_df$asp.effects=="-1.51"] = "-1.5,1"
 
-# All responses reflect mean climate (a.e. = -1,1)
-# all_output <- read_csv("SimOutput/S1_2025-01-31 10:58:00.csv") %>% 
-#   select(-asp.effect2) %>% 
-#   rbind(.,read_csv("SimOutput/S1_2025-02-04 15:54:27.csv")) %>% 
-#   rbind(.,read_csv("SimOutput/S1_2025-02-07 08_04_21.csv")) %>% 
-#   rbind(.,read_csv("SimOutput/S1_2025-02-13 07_56_36.csv"))
+all_output <- read_csv("SimOutput/S1_2025-02-24 10:45:07.csv")
 
 asp.effects <- unique(all_output$asp.effect)
 asp.effects
-two_pops <- asp.effects[c(1,2,7)]
-three_pops <- asp.effects[c(5,8)]
-four_pops_sym <- asp.effects[c(3,4,9)]
-four_pops_asym <- asp.effects[c(6)]
+two_pops <- asp.effects[c(1,2)]
+three_pops <- asp.effects[c(3)]
 
 all_plot <- all_output %>% 
   group_by(clim.sd, asp.mag, move.rate, rho, asp.effect) %>%
@@ -104,16 +92,14 @@ all_plot <- all_output %>%
 
 ## Comparing two population scenarios
 ```{r simple_two_pops}
-move.rates <- c(0.1)
 rhos <- c(0)
 asp.mags <- seq(0,20,5)
 
 two_pop_plot <- filter(all_plot,asp.effect%in%two_pops)
-# head(two_pop_plot)
 
 # line plot of asp mag selection
-filter(all_plot,asp.effect%in%two_pops & 
-                         move.rate%in%move.rates &
+filter(all_plot,  asp.effect%in%two_pops & 
+                         # move.rate%in%move.rates &
                          rho%in%rhos &
                          asp.mag%in%asp.mags) %>% 
   ggplot(.,aes(x=clim.sd,y=pop.lam,color=factor(move.rate)))+
@@ -123,7 +109,7 @@ filter(all_plot,asp.effect%in%two_pops &
 
 two_pop_contour <- filter(all_plot,
        asp.effect%in%two_pops & 
-       move.rate%in%move.rates &
+       #move.rate%in%move.rates &
        rho%in%rhos)
 
 cols <- contour_colors(two_pop_contour,0.05,var = "lambda")
